--- a/package.json
+++ b/package.json
@@ -21,15 +21,16 @@
     "tailwind-merge": "^2.3.0",
     "framer-motion": "^11.2.12",
     "react-hot-toast": "^2.4.1",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.0.1"
   },
   "devDependencies": {
     "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.5"
   }
